--- a/employee/index.html
+++ b/employee/index.html
@@ -16,27 +16,17 @@
   <body>
     <div class="d-flex">
       <!-- Thanh điều hướng cho Nhân viên -->
-      <div id="sidebar-container">
-        <h5 class="text-center mb-4">Nhân Viên</h5>
-        <a href="index.html" class="text-white text-decoration-none py-2">
-          <i class="bi bi-house-door me-2"></i>Trang Chủ
-        </a>
-        <a href="cham-cong.html" class="text-white text-decoration-none py-2">
-          <i class="bi bi-clock-fill me-2"></i>Chấm Công
-        </a>
-        <a href="thong-tin.html" class="text-white text-decoration-none py-2">
-          <i class="bi bi-person-fill me-2"></i>Thông Tin Cá Nhân
-        </a>
-        <a
-          href="dang-xuat.html"
-          class="btn btn-outline-light btn-sm mt-3 w-100"
-        >
-          <i class="bi bi-box-arrow-right me-2"></i>Đăng Xuất
-        </a>
-      </div>
+      <div id="sidebar-container"></div>
 
       <!-- Nội dung chính -->
       <main class="content flex-grow-1 p-4">
+        <button
+          style="color: white; border: 0"
+          id="sidebar-toggle"
+          class="mobile-toggle"
+        >
+          <i class="bi bi-list"></i>
+        </button>
         <h2>Chào Mừng, Nhân Viên</h2>
         <p>
           Đây là trang chủ của bạn, nơi bạn có thể quản lý công việc hàng ngày
@@ -99,6 +89,20 @@
       </main>
     </div>
 
+    <script>
+      fetch("layout/sidebar.html")
+        .then((res) => res.text())
+        .then((data) => {
+          document.getElementById("sidebar-container").innerHTML = data;
+        });
+
+      const sidebar = document.getElementById("sidebar-container");
+      const toggleButton = document.querySelector(".mobile-toggle");
+
+      toggleButton.addEventListener("click", () => {
+        sidebar.classList.toggle("open");
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
