--- a/employee/lich-lam.html
+++ b/employee/lich-lam.html
@@ -20,6 +20,13 @@
 
       <!-- Nội dung chính -->
       <main class="content flex-grow-1 p-4">
+        <button
+          style="color: white; border: 0"
+          id="sidebar-toggle"
+          class="mobile-toggle"
+        >
+          <i class="bi bi-list"></i>
+        </button>
         <h2>Lịch Làm Việc</h2>
         <p>Xem và cập nhật lịch làm việc của bạn.</p>
 
@@ -69,6 +76,13 @@
         .then((data) => {
           document.getElementById("sidebar-container").innerHTML = data;
         });
+
+      const sidebar = document.getElementById("sidebar-container");
+      const toggleButton = document.querySelector(".mobile-toggle");
+
+      toggleButton.addEventListener("click", () => {
+        sidebar.classList.toggle("open");
+      });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
